vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_select_return.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_select_return.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     '' == fn () string {
      |     ~~~~~~~~~~~~~~~~~~~~
    3 |         select {
    4 |             else {
