vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_select_return.vv
fn main() {
	'' == fn () string {
		select {
			else {
				return $embed_file(@FILE).path
			}
		}
		return ''
	}()
}
